--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -5,7 +5,7 @@
   box-sizing: border-box;
   color: black;
   .background {
-    background-color: black;
+    background-color: #f4f0ea;
     opacity: 0.5;
     height: 100%;
     width: 100%;
