--- a/src/components/header/nav/nav.module.scss
+++ b/src/components/header/nav/nav.module.scss
@@ -1,5 +1,10 @@
 .nav {
   overflow: hidden;
+  .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
 
   .wrapper {
     display: flex;
